KAA-878: Add the verify endpoint credentials field

--- a/server/node/src/main/resources/org/kaaproject/kaa/server/admin/client/i18n/KaaAdminConstants.properties
+++ b/server/node/src/main/resources/org/kaaproject/kaa/server/admin/client/i18n/KaaAdminConstants.properties
@@ -549,6 +549,8 @@ users = Users
 
 verifierToken = Verifier token
 
+verifyEndpointCredentials = Verify endpoint credentials
+
 version = Version
 
 weight = Weight
